syntax = "proto3";

option csharp_namespace = "GatewayBenchmark";

package todoit;

service ToDoIt{
// Create
rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) {};

// Read Single
rpc ReadToDo(ReadToDoRequest) returns (ReadToDoResponse) {};

// Read List
rpc GetAllToDo(GetAllToDoRequest) returns (GetAllToDoResponse) {};

// Update
rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) {};

// Delete
rpc ListToDo(DeleteToDoRequest) returns (DeleteToDoResponse) {};

}

message CreateToDoRequest {
	string title = 1;
	string description = 2;
}

message CreateToDoResponse {
	int32 id = 1;
}

message ReadToDoRequest {
	int32 id = 1;
}

message ReadToDoResponse {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string tatus = 4;
}

message GetAllToDoRequest {}

message GetAllToDoResponse {
	repeated ReadToDoResponse to_do = 1;
}

message UpdateToDoRequest {
	int32 id = 1;
	string title = 2;
	string description = 3;
	string status = 4;
}

message UpdateToDoResponse {
	int32 id = 1;
}

message DeleteToDoRequest {
	int32 id = 1;
}

message DeleteToDoResponse {
	int32 id = 1;
}